--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@
     margin: 0;
     padding: 0;
 }
+
+/*landing page*/
+.landing-page {
+    background-color:#eae5e5;
+}
+img{
+    border-radius: 5px;
+    width: 500px;
+    height: auto;
+    float: right;
+    margin: 5px;
+}
