--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 /*landing page*/
 .landing-page {
     background-color:#eae5e5;
+    padding: 100px;
 }
 img{
     border-radius: 5px;
@@ -15,3 +16,25 @@ img{
     float: right;
     margin: 5px;
 }
+/*navigation bar*/
+
+.navbar{
+    background-color: #dffdd7;
+    position: fixed;
+    text-align: ;
+
+}
+.navbar-nav{
+    justify-content: flex-end;
+}
+.navbar-brand{
+    color: white;
+    
+}
+.navbar-nav .nav-link{
+    color:white;
+}
+.navbar-nav .nav-link:hover{
+    color:aqua;
+}
+
