adding styling on the about section

--- a/style.css
+++ b/style.css
@@ -37,4 +37,11 @@ img{
 .navbar-nav .nav-link:hover{
     color:aqua;
 }
+/*About us section*/
+#about {
+    background-color: #dffdd7;
+    padding-top: 100px;
+    padding-bottom: 50px;
+    margin-top 10px;
+}
 
