--- a/style.css
+++ b/style.css
@@ -39,9 +39,18 @@ img{
 }
 /*About us section*/
 #about {
-    background-color: #dffdd7;
+    background-color: #9fb9b8;
     padding-top: 100px;
     padding-bottom: 50px;
-    margin-top 10px;
+    margin-top:10px;
 }
+#resources {
+    background-color: #eae5e5;
+    background-size:cover;
+    background-position: center;
+    height: 500px;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
 
