--- a/style.css
+++ b/style.css
@@ -52,5 +52,10 @@ img{
     padding-top: 50px;
     padding-bottom: 100px;
 }
+.card-img-top{
+    object-fit: cover;
+    width: 100%;
+    height: 15vw;
+}
 
 
