--- a/style.css
+++ b/style.css
@@ -49,13 +49,21 @@ img{
     background-size:cover;
     background-position: center;
     height: 500px;
-    padding-top: 50px;
+    padding-top: 100px;
     padding-bottom: 100px;
+    margin-bottom: 30px;
 }
 .card-img-top{
     object-fit: cover;
     width: 100%;
     height: 15vw;
 }
+#contact {
+    background-color: #9fb9b8;;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+}
+
 
 
