--- a/style.css
+++ b/style.css
@@ -21,11 +21,10 @@ img{
 .navbar{
     background-color: #dffdd7;
     position: fixed;
-    text-align: ;
+    
 
 }
-.navbar-nav{
-    justify-content: flex-end;
+
 }
 .navbar-brand{
     color: white;
@@ -36,6 +35,7 @@ img{
 }
 .navbar-nav .nav-link:hover{
     color:aqua;
+    text-decoration: underline;
 }
 /*About us section*/
 #about {
@@ -62,10 +62,13 @@ img{
     background-color: #9fb9b8;;
     padding-top: 50px;
     padding-bottom: 50px;
+    margin-bottom: 50px;
 
 }
-.social-links ul{
+.social-links {
     list-style: none;
+    padding-left: 20px;
+    font-weight: 100;
 }
 .social-links a{
     color: #08605f;
@@ -73,6 +76,10 @@ img{
 }
 .social-links :hover{
     color:blue;
+
+}
+.btn{
+    border-radius: 50px;
 }
 
 
